--- a/pertemuan-04/style.css
+++ b/pertemuan-04/style.css
@@ -37,3 +37,20 @@ footer {
   text-align: center;
   padding: 10px;
 }
+
+header li a:hover {
+  background-color: #85020d;
+  border-radius: 6px;
+  transition: backround-color 0.3s ease;
+}
+
+header li a:focus {
+  outline-offset: 2px;
+  border-radius: 6px;
+  background-color: rgb(255, 255, 255, 0. 15);
+}
+
+header li a:active {
+ background-color: #cc04a1;
+ transform: translateY(1px);
+}
