class  menu-toggle

--- a/pertemuan-05/style.css
+++ b/pertemuan-05/style.css
@@ -54,3 +54,11 @@ header li a:active {
  background-color: #cc04a1;
  transform: translateY(1px);
 }
+
+.menu-toggle  {
+  display: none;
+  background: none;
+  border:   #fff;
+  font-size: 28px;
+  cursor: pointer;
+}
