--- a/pertemuan-05/style.css
+++ b/pertemuan-05/style.css
@@ -62,3 +62,10 @@ header li a:active {
   font-size: 28px;
   cursor: pointer;
 }
+
+.menu-toggle  {
+  display: block;
+  position: absolute;
+  left: 16px;
+  top: 8px;
+}
