--- a/pertemuan-13/style.css
+++ b/pertemuan-13/style.css
@@ -4,11 +4,15 @@
 
 body {
   margin: 0;
+  background-image: url('image.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   font-family: Arial, sans-serif;
-  background: #f5f5f5;
   color: #333;
   line-height: 1.5;
 }
+
 
 header {
   background: #003366;
